2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Use "=" not "==" in [] comparisons.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Correct handling of --jobs, --load
	and --single-thread.
	* build-uclibc.sh: Correct typo in gdbserver config.

2013-02-05  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Correct layout
	* dejagnu/baseboards/arc-linux-nsim.exp: Correct assignment of
	hostname.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Specify hostname.
	* dejagnu/baseboards/arc-linux-generic.exp: Don't specify hostname
	* dejagnu/baseboards/arc-linux-nsim.exp: Set hostname using
	get-ip.sh script.
	* get-ip.sh, ip-avail.txt: Created.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Use '=' when specifying board
	(save_res): Correct tests.

2013-02-04  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check): Add board as fourth argument.
	(save_res): Only run if there is a result file, and put all
	results to log.
	* dejagnu/baseboards/arc-linux-generic.exp: Take the
	target_install data from ${target_triplet}.
	* dejagnu/baseboards/arc-sim-base.exp: Likewise.
	* run-elf32-tests.sh: Add board when running tests.
	* run-tests.sh (ARC_TEST_TARGET): Correct typo in default value
	* run-uclibc-tests.sh: Add board when running tests
	* site.exp: Only set target_list if not already set. Error if not
	a recognized ARC triplet.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Correct error in merging option to control
	building of unified source tree.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Correct commenting.

2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add option to control building of unified source
	tree.
